--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
 
-  "name": "Queen Ashiya",
+  "name": "ᴬᴸᴵ⁻ᴷᴵᴺᴳ",
 
   "description": "whatsapp md bot build with nodejs",
 
   "repository": "https://github.com/BlackPanther-svg/Queen-Ashiya",
 
-  "logo": "https://i.ibb.co/fNQdj2h/Qeen-Ashiya.jpg",
+  "logo": "https://www.linkpicture.com/q/G_3.jpg",
 
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
 
